--- a/scss/_top.scss
+++ b/scss/_top.scss
@@ -7,7 +7,7 @@
   overflow: hidden;
   position: relative;
   margin-bottom: 80px;
-  
+
   video {
     position: absolute;
     top: 0;
@@ -72,7 +72,7 @@
 
   .purpose-list {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     padding: 0;
 
@@ -85,13 +85,13 @@
         border-radius: 20px;
         box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.25);
         padding: 10px;
-        
+
         img {
           width: 50px;
           height: 50px;
           margin-right: 10px;
         }
-        
+
         .box-title {
           span {
             display: block;
@@ -208,6 +208,439 @@
         .box-title {
           color: $yellow;
         }
+      }
+    }
+  }
+}
+
+
+#flow {
+  background-color: $blue;
+  margin-top: 100px;
+  padding-block: 60px 40px;
+  border-top-left-radius: 50px;
+  border-top-right-radius: 50px;
+
+  .section-title {
+    margin-bottom: 0;
+    color: $white;
+  }
+
+  .section-title,
+  span,
+  .text-top {
+    color: $white;
+  }
+
+  span {
+    font-size: 1.2rem;
+    margin-left: 20px;
+    position: relative;
+
+    &:before {
+      content: "";
+      position: absolute;
+      left: -10px;
+      bottom: 50%;
+      transform: translateY(50%);
+      width: 8px;
+      height: 8px;
+      background-color: $yellow;
+      border-radius: 50%;
+    }
+  }
+
+  ul {
+    background-color: $grey;
+    border-radius: 8px;
+    padding: 32px 24px;
+    display: grid;
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+    margin-top: 40px;
+    gap: 24px;
+
+    li {
+      .card {
+        background-color: $white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 24px 16px;
+        border-radius: 8px;
+
+        .middle {
+          margin-bottom: 0;
+        }
+
+        img {
+          width: 80px;
+          height: 80px;
+        }
+
+      }
+    }
+
+  }
+
+  .scroll-divider {
+    overflow: hidden;
+    background: transparent;
+
+
+    .scroll-text {
+      color: $white;
+      font-size: 200px;
+      font-weight: 700;
+      opacity: 0.08;
+      white-space: nowrap;
+      animation: marquee 12s linear infinite;
+    }
+  }
+}
+
+@keyframes marquee {
+  from {
+    transform: translateX(0);
+  }
+
+  to {
+    transform: translateX(-50%);
+  }
+}
+
+#teacher,
+#works,
+#comparison {
+  .section-title {
+    margin-bottom: 0
+  }
+
+  .section-title,
+  span,
+  .text,
+  .name,
+  .words {
+    color: $black;
+  }
+
+  span {
+    font-size: 1.2rem;
+    margin-left: 20px;
+    position: relative;
+
+    &:before {
+      content: "";
+      position: absolute;
+      left: -15px;
+      bottom: 50%;
+      transform: translateY(50%);
+      width: 8px;
+      height: 8px;
+      background-color: $yellow;
+      border-radius: 50%;
+    }
+  }
+
+}
+
+#teacher {
+  background-color: $blue;
+  padding-block: 10px 40px;
+  border-bottom-left-radius: 50px;
+  border-bottom-right-radius: 50px;
+
+  .teacher-grid {
+    display: grid;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    margin-top: 40px;
+    gap: 24px;
+
+  }
+
+  .section-title,
+  span,
+  .text,
+  .name,
+  .words {
+    color: $white;
+  }
+
+}
+
+#works {
+  padding-block: 100px;
+
+
+
+  .flip-slider__inner {
+    perspective: 1000px;
+
+    a {
+      display: block;
+      padding: 20px;
+    }
+
+    .slick-slide {
+      padding: 0 20px;
+
+      &:nth-child(odd) {
+        padding-top: 40px;
+      }
+
+      &:nth-child(even) {
+        padding-top: -40px;
+      }
+    }
+
+  }
+
+  .slider-inner {
+    position: relative;
+    width: 100%;
+    aspect-ratio: 4 / 3;
+    transform-style: preserve-3d;
+    transition: transform 0.6s ease;
+    cursor: pointer;
+
+    &:hover {
+      transform: rotateY(180deg)
+    }
+
+    .front,
+    .back {
+      position: absolute;
+      backface-visibility: hidden;
+      border-radius: 10px;
+      inset: 0;
+      overflow: hidden;
+
+      img {
+        height: 100%;
+        display: block;
+      }
+    }
+
+    .back {
+      transform: rotateY(180deg);
+    }
+  }
+
+  .viewmore {
+    display: flex;
+    flex-direction: row-reverse;
+
+
+    a {
+      display: block;
+      padding: 5px 20px;
+      border-radius: 50px;
+      border: 1px solid $black;
+
+      &:hover {
+        background-color: $yellow;
+        color: $white;
+      }
+    }
+
+  }
+
+}
+
+#comparison {
+  background-color: $white;
+  z-index: 0;
+  position: relative;
+  padding-bottom: 80px;
+
+  &:before {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 20%;
+    background-color: $light-grey;
+    z-index: -10;
+  }
+
+  .compare-table {
+    width: 100%;
+    border-collapse: collapse;
+    table-layout: fixed;
+    background-color: $white;
+    overflow: hidden;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
+    font-size: 1.8rem;
+    border: 1px solid #a6a6a6;
+    margin-bottom: 100px;
+
+    span {
+      &:before {
+        display: none
+      }
+    }
+
+    th,
+    td {
+      padding: 20px 16px;
+      border-bottom: 1px solid #a6a6a6;
+      text-align: center;
+      vertical-align: middle;
+    }
+
+    thead {
+      tr {
+        border-bottom: 1px solid #a6a6a6;
+      }
+
+      th {
+        background-color: $light-grey;
+        position: relative;
+        height: 80px;
+
+        &:first-child {
+          background-color: $white;
+          width: 18%;
+        }
+
+        &:nth-child(n + 2) {
+          width: calc((100% - 18%) / 3);
+        }
+      }
+
+      th.pronavi {
+        background-color: $yellow;
+        border-left: 1px solid $yellow;
+        border-right: 1px solid $yellow;
+      }
+
+      th.right {
+        border-left: 1px solid #a6a6a6;
+      }
+
+      .school-name {
+        font-weight: 700;
+        display: block;
+      }
+    }
+
+    tbody {
+
+      tr:nth-child(even) {
+        background-color: $light-grey;
+      }
+
+      th[scope="row"] {
+        width: 18%;
+        font-weight: 400;
+      }
+
+      td {
+        width: calc((100% - 18%) / 3);
+
+        .small {
+          display: block;
+          font-size: 1.2rem;
+          margin-top: 4px;
+          line-height: 1.5;
+        }
+      }
+
+      td.right {
+        border-left: 1px solid #a6a6a6;
+      }
+
+      td.pronavi {
+        border-right: 2px solid $yellow;
+        border-left: 2px solid $yellow;
+
+      }
+
+      tr:last-child {
+        .pronavi {
+          border-bottom: 2px solid $yellow;
+        }
+      }
+
+    }
+
+
+  }
+
+  .cooling-off {
+    background-color: $white;
+    border-radius: 20px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+    padding: 24px 56px;
+
+
+    span {
+      margin-left: 0;
+
+      &:before {
+        display: none
+      }
+    }
+
+    .box-inner {
+      padding-inline: 15%;
+
+
+      .flex {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+        gap: 2.4rem;
+        margin-bottom: 20px;
+
+        .text-box {
+          width: 50%;
+          color: $navy;
+
+          .sub {
+            margin-bottom: 0;
+            color: $navy;
+          }
+
+          .label {
+            width: 60%;
+            background-color: $navy;
+            color: $white;
+            text-align: center;
+            padding: 5px 30px;
+            border-radius: 10px;
+            margin-top: 5px;
+          }
+
+          .info {
+            font-size: 3.0rem;
+            font-weight: 700;
+            margin-bottom: 0;
+            letter-spacing: 0.4rem;
+            position: relative;
+
+            &:before {
+              position: absolute;
+              bottom: 0;
+              left: 0;
+              content: "";
+              background-color: $yellow;
+              width:310px;
+              height: 2px;
+
+            }
+
+            span {
+              font-size: 1.4rem;
+              margin-right: 5px;
+            }
+          }
+        }
+
+        .icon {
+          max-width: 180px;
+        }
+
       }
     }
   }
