--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -11,6 +11,7 @@ $blue: #80A0B1;
 $light-grey: #F6F6F6;
 $grey:#E8E8E8;
 $navy: #283038;
+$border-grey: #a6a6a6;
 
 // --------------------------------------
 // Typography 
