footerちょっと修正

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -51,6 +51,7 @@ footer {
 
         .left {
             width: 35%;
+            padding-left: 0;
 
             img {
                 margin-block: 32px;
