--- a/style.css
+++ b/style.css
@@ -888,16 +888,67 @@ img {
 .about #about .flex-box .flex-left {
   width: 80%;
 }
-.about #about .flex-box .flex-left .text {
-  font-weight: 700;
+.about #about .flex-box .flex-left .circle {
+  display: flex;
+  color: #FFFFFF;
+  text-align: center;
+  position: relative;
+}
+.about #about .flex-box .flex-left .circle .circle-left,
+.about #about .flex-box .flex-left .circle .circle-right {
+  flex: 1;
+  /* 等分して横並び */
+  aspect-ratio: 1;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: #fff;
+  background-color: #acc8d8;
+}
+.about #about .flex-box .flex-left .circle .circle-right {
+  background-color: #98b3c2;
+}
+.about #about .flex-box .flex-left .circle::before, .about #about .flex-box .flex-left .circle::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 38px;
+  height: 2px;
+  background: #FFFFFF;
+  transform-origin: center;
+  transform: translate(-50%, -50%) rotate(45deg);
+  border-radius: 2px;
+}
+.about #about .flex-box .flex-left .circle::after {
+  transform: translate(-50%, -50%) rotate(-45deg);
 }
 .about #about .flex-box .flex-left .shadow-box {
   padding: 5px 20px;
   margin-top: 10px;
   border-radius: 10px;
+  position: relative;
 }
 .about #about .flex-box .flex-left .shadow-box .text {
   border-bottom: #DB8405 1px solid;
+  font-weight: 700;
+}
+.about #about .flex-box .flex-left .shadow-box::before, .about #about .flex-box .flex-left .shadow-box::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: -18%;
+  width: 30px;
+  height: 5px;
+  background: #80A0B1;
+  transform-origin: center;
+  transform: translate(-50%, -50%);
+  border-radius: 2px;
+}
+.about #about .flex-box .flex-left .shadow-box::after {
+  transform: translate(-50%, -50%) rotate(-90deg);
 }
 .about #about .flex-box .flex-right {
   width: 90%;
@@ -917,6 +968,9 @@ img {
   margin-top: 20px;
   padding: 10px 20px;
 }
+.about #about .flex-box .flex-right button:hover {
+  opacity: 0.5;
+}
 .about #curriculum .step {
   display: grid;
   grid-template-columns: 25% 75%;
@@ -924,23 +978,22 @@ img {
   margin-bottom: 40px;
 }
 .about #curriculum .step .month {
-  position: relative;
-  background: #cfdde3;
-  color: #FFFFFF;
+  padding: 50px 0;
   text-align: center;
-  padding-block: 50px;
+  position: relative;
+  color: #FFFFFF;
   border-radius: 15px 15px 0 0;
+  background-color: #c8d6df;
 }
 .about #curriculum .step .month::after {
   content: "";
   position: absolute;
-  bottom: -20px;
-  left: 0;
-  width: 100%;
-  height: 0;
-  border-style: solid;
-  border-width: 20px 70px 0 70px;
-  border-color: #cfdde3 transparent transparent transparent;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 100%;
+  border-top: 20px solid #c8d6df;
+  border-left: 75px solid transparent;
+  border-right: 75px solid transparent;
   z-index: 10;
 }
 .about #curriculum .step .month:nth-of-type(2) {
@@ -1176,6 +1229,71 @@ img {
 .company #overview .company-table a {
   text-decoration: underline;
   word-break: break-all;
+}
+
+.company footer {
+  background-color: #283038;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  padding-block: 64px 112px;
+}
+.company footer .contact {
+  display: block;
+  background-color: #80A0B1;
+  border-radius: 10px;
+  width: 100%;
+  padding: 2.5rem 1.8rem;
+}
+.company footer .contact .flex {
+  display: flex;
+  justify-content: space-between;
+  gap: 2%;
+}
+.company footer .contact .flex img {
+  display: block;
+  width: 20%;
+  object-fit: contain;
+}
+.company footer .contact .flex p {
+  color: #FFFFFF;
+}
+.company footer .footer-bottom {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 2%;
+  width: 100%;
+  border-bottom: 1px solid #FFFFFF;
+}
+.company footer .footer-bottom .left {
+  width: 25%;
+}
+.company footer .footer-bottom .left img {
+  margin-block: 32px;
+}
+.company footer .footer-bottom .left a {
+  color: #FFFFFF;
+  font-size: 1.2rem;
+  margin-bottom: 1.6rem;
+}
+.company footer .footer-bottom .left a:hover {
+  opacity: 0.6;
+}
+.company footer .footer-bottom .right {
+  width: 25%;
+  margin-left: auto;
+  margin-top: 80px;
+}
+.company footer .footer-bottom .right li {
+  text-align: right;
+}
+.company footer .footer-bottom .right li a {
+  color: #FFFFFF;
+  font-size: 1.2rem;
+  margin-bottom: 1.6rem;
+}
+.company footer .footer-bottom .right li a:hover {
+  opacity: 0.6;
 }
 
 header {
