--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,48 +1,32 @@
 @use './_mixin' as mx;
 @use './_base' as *;
 
-
 .about {
-    #fv {
-        position: relative;
-        padding-block: 50px;
-
-        .section-title__en {
-            font-size: 150px;
-            font-weight: 900;
-            color: $light-grey;
-            position: absolute;
-            left: -10px;
-            bottom: -20px;
-            z-index: 0;
-        }
-
-        .section-title {
-            color: $black;
-            position: relative;
-
-            &::before {
-                content: "";
-                position: absolute;
-                bottom: -10px;
-                width: 30%;
-                height: 2px;
-                background-color: $yellow;
-                border-radius: 2px;
-            }
-        }
-    }
 
     // ページ全体共通
     section {
-        margin-block: 80px;
+        margin-bottom: 120px;
+
+        @include mx.tb {
+            margin-bottom: 80px;
+        }
+        @include mx.sp {
+            margin-bottom: 60px;
+        }
     }
 
-    .box-title {
-        margin-block: 5px;
+    .section-title {
+        margin-block: 5px 50px;
+        opacity: 0;
+        transform: translateY(30px);
+        transition: opacity 1.2s ease, transform 1.2s ease;
+        
+        @include mx.tb {
+            margin-block: 5px 30px;
+        }
 
         span {
-            font-size: 1.2rem;
+            font-size: 1rem;
             margin-left: 20px;
             position: relative;
             display: block;
@@ -61,12 +45,22 @@
         }
     }
 
+    .section-title-active {
+        opacity: 1;
+        transform: translateY(0);
+    }
+
     .shadow-box {
         background: $white;
         border-radius: 20px;
         box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
         padding: 40px;
         margin-top: 40px;
+
+
+        @include mx.sp {
+            padding: 20px;
+        }
     }
 
     .back-text {
@@ -77,6 +71,47 @@
     }
 
     // 各セクション
+    #fv {
+        position: relative;
+        margin-top:130px ;
+
+        @include mx.sp {
+            margin-top:50px;
+        }
+
+        .section-title__en {
+            font-size: 150px;
+            font-weight: 900;
+            color: $light-grey;
+            position: absolute;
+            left: -10px;
+            bottom: -100px;
+            z-index: 0;
+
+            @include mx.sp {
+                font-size: 80px;
+                left: 10px;
+                bottom: -50px;
+            }
+        }
+
+        .section-title {
+            color: $black;
+            position: relative;
+
+            &::before {
+                content: "";
+                position: absolute;
+                bottom: -10px;
+                width: 30%;
+                height: 2px;
+                background-color: $yellow;
+                border-radius: 2px;
+                
+            }
+        }
+    }
+
     #moya {
         background-color: $light-grey;
         border-radius: 15px;
@@ -84,6 +119,10 @@
         text-align: center;
         position: relative;
 
+        @include mx.tb {
+            padding: 25px;
+            margin-inline: 20px;
+        }
         .box-title {
             margin-bottom: 30px;
         }
@@ -91,12 +130,13 @@
         &::after {
             content: "";
             position: absolute;
-            bottom: -30px;
-            right: 250px;
-            width: 20%;
+            top: 100%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 0;
             height: 0;
             border-style: solid;
-            border-width: 40px 60px 0 60px;
+            border-width: 40px 60px 0px 60px;
             border-color: $blue transparent transparent transparent;
         }
     }
@@ -108,29 +148,34 @@
         ul {
             background-color: $light-yellow;
             box-shadow: -5px 10px 20px rgba(0, 0, 0, 0.15);
-            padding: 30px 120px;
+            padding: 30px 180px;
             position: relative;
+
+            @include mx.sp {
+                padding: 25px;
+            }
 
             &::after {
                 content: "";
                 position: absolute;
-                bottom: -50px;
+                top: 100%;
                 left: 50%;
                 transform: translateX(-50%);
-                /* 中央寄せ */
                 width: 0;
                 height: 0;
                 border-style: solid;
-                border-width: 50px 280px 0 280px;
-                /* 上が20pxの三角 */
+                border-width: 50px 380px 0 380px;
                 border-color: $light-yellow transparent transparent transparent;
+
+                @include mx.sp {
+                    border-width: 40px 170px 0 170px;
+                }
             }
 
             li {
                 text-align: left;
                 display: flex;
                 align-items: center;
-                font-weight: 700;
 
                 span {
                     img {
@@ -146,26 +191,45 @@
         text-align: center;
 
         .yellow {
+            font-size: 2.5rem;
             background-color: $yellow;
         }
 
         ul {
+            margin-top: 50px;
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
-            gap: 10px 20px;
+            gap: 0px 40px;
+            padding-left: 0;
+
+            @include mx.sp {
+                gap: 0px 10px;
+            }
         }
     }
 
     #about {
         padding: 50px 100px;
 
+        @include mx.tb {
+            padding: 40px 30px 100px;
+            margin-inline:30px ;
+        }
+        @include mx.sp {
+            padding: 40px 10px 100px;
+        }
         .flex-box {
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 30px 10px;
 
+            @include mx.sp {
+                grid-template-columns: 1fr;
+                justify-items: center;
+            }
+
             .flex-left {
-                width: 80%;
+                width: 84%;
 
                 .circle {
                     display: flex;
@@ -205,13 +269,14 @@
                         transform: translate(-50%, -50%) rotate(45deg);
                         border-radius: 2px;
                     }
+
                     &::after {
                         transform: translate(-50%, -50%) rotate(-45deg);
                     }
                 }
 
                 .shadow-box {
-                    padding: 5px 20px;
+                    padding: 5px 20px 10px;
                     margin-top: 10px;
                     border-radius: 10px;
                     position: relative;
@@ -235,10 +300,10 @@
                         transform: translate(-50%, -50%);
                         border-radius: 2px;
                     }
+
                     &::after {
                         transform: translate(-50%, -50%) rotate(-90deg);
                     }
-
                 }
             }
 
@@ -252,19 +317,33 @@
                     line-height: 1.7;
                 }
 
+                .small {
+                    line-height: 2.2;
+                }
+
                 button {
                     position: absolute;
                     right: 0;
                     background: $white;
                     border: $black 1px solid;
-                    border-radius: 20px;
+                    border-radius: 50px;
                     margin-top: 20px;
-                    padding: 10px 20px;
+                    padding: 15px 30px;
+                    transition: all 0.5s ease;
 
-                    &:hover{
-                        opacity: 0.5;
+                    &:hover {
+                        background-color: $yellow;
+                        border: $white 1px solid;
 
+                        a {
+                            color: $white;
+                        }
                     }
+
+                    @include mx.sp {
+                        padding: 10px 25px;
+                    }
+
                 }
             }
         }
@@ -277,24 +356,54 @@
             gap: 5px 20px;
             margin-bottom: 40px;
 
+            @include mx.sp {
+                grid-template-columns: 25% 75%;
+                gap: 7px;
+                padding:0;
+            }
+
             .month {
                 padding: 50px 0;
                 text-align: center;
                 position: relative;
                 color: $white;
-                border-radius: 15px 15px 0 0;
+                border-radius: 15px 15px 5px 5px;
                 background-color: #c8d6df;
+                @include mx.tb {
+                    padding:40px 0;
+                }
+                @include mx.sp {
+                    padding:30px 0;
+                    font-size: 1.2rem;
+                }
 
                 &::after {
                     content: "";
                     position: absolute;
+                    top: 100%;
                     left: 50%;
                     transform: translateX(-50%);
-                    top: 100%;
-                    border-top: 20px solid #c8d6df;
-                    border-left: 75px solid transparent;
-                    border-right: 75px solid transparent;
+                    width: 0;
+                    height: 0;
+                    border-style: solid;
+                    border-width: 30px 95px 0px 95px;
+                    border-color: #c8d6df transparent transparent transparent;
                     z-index: 10;
+
+                    @include mx.tb {
+                        border-width: 15px 80px 0px 80px;
+                    }
+                    @include mx.sp {
+                        border-width: 15px 40px 0px 40px;
+                    }
+                }
+
+                &:last-of-type {
+                    border-radius: 15px;
+
+                    &::after {
+                        border-width: 0;
+                    }
                 }
 
                 // 背景と下の三角をまとめて上書き（グラデーション風に）
@@ -306,12 +415,14 @@
                             #98b3c2,
                             $blue
                         );
+
                     $z: (
                         9,
                         8,
                         7,
                         6
                     );
+
                 background: nth($colors, $i - 1);
                 z-index: nth($z, $i - 1);
 
@@ -321,14 +432,37 @@
                 }
             }
         }
+
     }
 
     .content {
         border-bottom: 1px solid #ccc;
         padding: 5px 10px;
 
+        @include mx.sp {
+            margin-left: 0;
+        }
+
         &:first-of-type {
             border-top: 1px solid #ccc;
+        }
+
+        span{
+            @include mx.sp {
+                padding: 2px 10px;
+                font-size: 1.5rem;
+            }
+        }
+
+        h3{
+            @include mx.sp {
+                font-size:1.4rem;
+                margin-block: 10px;
+            }
+        }
+
+        .small {
+            margin-top: 0;
         }
     }
 
@@ -352,6 +486,11 @@
     .shadow-box {
         text-align: center;
         position: relative;
+        padding-inline: 100px;
+
+        @include mx.sp {
+            padding: 40px 20px 30px;
+        }
 
         &::before {
             content: "";
@@ -377,11 +516,14 @@
 
         ul {
             text-align: left;
-            display: flex;
-            justify-content: space-between;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 10px;
+            @include mx.sp {
+                grid-template-columns: 1fr;
+            }
 
             li {
-
                 position: relative;
 
                 &:before {
@@ -400,5 +542,79 @@
     }
 }
 
-#works {}
+#works {
+
+    .flip-slider__inner {
+        padding-block: 80px;
+        perspective: 1000px;
+
+        a {
+            display: block;
+            padding: 20px;
+        }
+
+        .slick-slide {
+            padding: 0 20px;
+
+            &:nth-child(odd) {
+                padding-top: 40px;
+            }
+
+            &:nth-child(even) {
+                padding-top: -40px;
+            }
+        }
+    }
+
+    .slider-inner {
+        position: relative;
+        width: 100%;
+        aspect-ratio: 4 / 3;
+        transform-style: preserve-3d;
+        transition: transform 0.6s ease;
+        cursor: pointer;
+
+        &:hover {
+            transform: rotateY(180deg)
+        }
+
+        .front,
+        .back {
+            position: absolute;
+            backface-visibility: hidden;
+            border-radius: 10px;
+            inset: 0;
+            overflow: hidden;
+
+            img {
+                height: 100%;
+                display: block;
+            }
+        }
+
+        .back {
+            transform: rotateY(180deg);
+        }
+    }
+
+    .viewmore {
+        display: flex;
+        flex-direction: row-reverse;
+
+        a {
+            display: block;
+            padding: 10px 35px;
+            border-radius: 50px;
+            border: 1px solid $black;
+            transition: all 0.5s ease;
+            letter-spacing: 0.15em;
+
+            &:hover {
+                background-color: $yellow;
+                color: $white;
+                border: 1px solid $white;
+            }
+        }
+    }
+}
 }
