--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -126,7 +126,7 @@ img {
 .message {
     @extend %heading;
     font-size: $fs-h4;
-    font-weight: $fw-medium;
+    font-weight: $fw-bold;
 
     @include mx.tb {
         font-size: 1.8rem;
@@ -185,7 +185,7 @@ img {
 }
 
 .inner {
-    max-width: 640px;
+    max-width: 800px;
     margin-inline: auto;
     padding-inline: 20px;
 }
